[project]
name = "financial-document-analyzer-debug"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "celery>=5.6.2",
    "click>=8.3.1",
    "crewai==0.130.0",
    "crewai-tools==0.47.1",
    "fastapi==0.110.3",
    "google-ai-generativelanguage>=0.6.15",
    "google-api-core>=2.25.2",
    "google-api-python-client>=2.190.0",
    "google-auth>=2.48.0",
    "google-auth-httplib2>=0.3.0",
    "google-cloud-aiplatform>=1.138.0",
    "google-cloud-bigquery>=3.40.1",
    "google-cloud-core>=2.5.0",
    "google-cloud-resource-manager>=1.16.0",
    "google-cloud-storage>=3.4.1",
    "google-crc32c>=1.8.0",
    "google-generativeai>=0.8.6",
    "google-resumable-media>=2.8.0",
    "googleapis-common-protos>=1.72.0",
    "jinja2>=3.1.6",
    "jsonschema>=4.26.0",
    "langchain-core>=0.3.83",
    "langsmith>=0.3.45",
    "numpy>=2.4.2",
    "oauthlib>=3.3.1",
    "onnxruntime>=1.22.0",
    "openai>=1.109.1",
    "opentelemetry-api>=1.39.1",
    "opentelemetry-exporter-otlp-proto-common>=1.39.1",
    "opentelemetry-exporter-otlp-proto-grpc>=1.39.1",
    "opentelemetry-exporter-otlp-proto-http>=1.39.1",
    "opentelemetry-instrumentation>=0.60b1",
    "opentelemetry-instrumentation-asgi>=0.60b1",
    "opentelemetry-instrumentation-fastapi>=0.60b1",
    "opentelemetry-proto>=1.39.1",
    "opentelemetry-sdk>=1.39.1",
    "opentelemetry-semantic-conventions>=0.60b1",
    "opentelemetry-util-http>=0.60b1",
    "pandas>=3.0.1",
    "pillow>=12.1.1",
    "pip>=26.0.1",
    "protobuf>=5.29.6",
    "pydantic>=2.12.5",
    "pydantic-core>=2.41.5",
    "python-multipart>=0.0.22",
    "redis>=7.2.0",
]
